--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,5 @@
     <meta charset="utf-8">
     <title>Francesco Casula</title>
 </head>
-<body>
-    {{ content }}
-</body>
+<body>{{ content }}</body>
 </html>
