--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{{ site.title | default: Francesco Casula }}</title>
+    <title>{{ site.title | default: "Francesco Casula" }}</title>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
@@ -25,7 +25,7 @@
 <div class="wrapper">
     <section>
         <div id="title">
-            <h1>{{ site.title | default: Francesco Casula }}</h1>
+            <h1>{{ site.title | default: "Francesco Casula" }}</h1>
             <p>{{ site.description | default: site.github.project_tagline }}</p>
         </div>
         {{ content }}
