--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
             <h1>{{ site.title | default: "Francesco Casula" }}</h1>
             {% if site.description %}
                 <p>{{ site.description | default: site.github.project_tagline }}</p>
-            {% endif %}
+            {% endif %}2
         </div>
         {{ content }}
     </section>
